# VLA_JAX_TPU

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  gcp_tpu_setup.md
run_scripts/train/: train_libero_qwen3_vl_2gpu_30k.sh  train_libero_qwen3_vl_2gpu_40k.sh  train_libero_qwen3_vl_gpu.sh  train_libero_qwen3_vl_tpu.sh
scripts/: check_env.sh  gcloudw.sh  run_convert_portable_ckpt.sh  run_inspect_refit20.sh  run_libero_eval_gpu_axis_flip.sh  run_libero_eval_same_shell.sh  run_libero_eval_same_shell_axis_flip.sh  run_libero_eval_same_shell_axis_noflip.sh  run_libero_eval_same_shell_axis_noflip_v2.sh  run_libero_eval_tpu_axis_flip.sh  run_libero_server_40k.sh  run_local_flow_smoke.sh
vla_tpu/: __init__.py
vla_tpu/configs/: __init__.py  base.py
vla_tpu/data/: dummy.py  factory.py  lerobot_dataset.py  robocasa_lerobot.py  schema.py
vla_tpu/eval/: libero_eval.py
vla_tpu/models/: action_head.py  action_head_flow.py  action_head_flow_legacy.py  backbone.py  policy.py  qwen3_vl_jax.py  qwen3_vl_weight_loader.py  qwen_processor.py  qwen_reference.py  qwen_xla_reference.py
vla_tpu/serving/: infer.py  websocket_policy_server.py
vla_tpu/tools/: __init__.py  benchmark_pure_infer.py  benchmark_qwen_xla.py  compare_qwen3_vl_decoder_parity.py  compare_qwen3_vl_jax_reference.py  compare_qwen3_vl_vision_stages.py  convert_checkpoint_to_portable.py  inspect_checkpoint_batch_fit.py  inspect_robocasa_batch.py  local_eval_dryrun.py  run_qwen_reference.py  run_qwen_xla_reference.py  train_pmap_smoke.py
vla_tpu/training/: state.py  train.py
(+2 files in other folders)
